--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Blackjack</title>
 </head>
 <body>
-    <h1>Blackjack Game</h1>
+    <h1>BLACKJACK.js</h1>
     <p id="message-el">Click "START GAME" to begin</p>
     <p id="cards-el">Cards:</p>
     <p id="sum-el">Sum:</p>
